fix profile section overflow on phones

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,9 +1,8 @@
 .profile {
     background-color: #1d539f !important;
     text-align: center;
-    height: 320px;
     margin-bottom: 30px;
-    padding-top: 1px;
+    padding: 20px 0px;
     h1 {
         font-size: 50px;
         font-weight: 700;
